--- a/views/layout.njk
+++ b/views/layout.njk
@@ -12,12 +12,13 @@
   <body>
     <header>
       <div class="links">
-        <a class="active" href="/">Instrutores</a>
+        <a href="/instructors">Instrutores</a>
         <a href="/members">Membros</a>
       </div>
     </header>
 
     {% block content %}{% endblock %}
 
+    <script src="/scripts.js"></script>
   </body>
 </html>
