--- a/views/members/index.njk
+++ b/views/members/index.njk
@@ -3,7 +3,8 @@
 {% block content %}
 
   <div class="card table-container">
-    <a href="/instructors/create">Novo</a>
+    <a href="/members/create">Novo</a>
+
     <table width="100%">
       <thead>
         <tr>
